Contrast fix
- The title was a little bit hard to read, changed one of the color to contrast better with the background

--- a/pages/simulation/simulation.css
+++ b/pages/simulation/simulation.css
@@ -110,7 +110,7 @@ html {
   font-size: xxx-large;
   text-align: center;
   color: white;
-  text-shadow: 0 0 5px #fff, 0 0 10px #53a2f5;
+  text-shadow: 0 0 5px #fff, 0 0 10px #04192d;
   z-index: 2;
   position: relative;
   margin-bottom: 0;
